8281711: Cherry-pick WebKit 613.1 stabilization fixes

Stabilization fixes from WebKitGTK 2.34.5

Reviewed-by: jvos, kcr