modules/javafx.web/src/main/native/Source/WebCore/page/FrameView.h
@@ -682,6 +682,7 @@ public:
 
     String debugDescription() const final;
 
+    void willBeDestroyed() final;
     // ScrollView
     void updateScrollbarSteps() override;
 
